compiler/testData/diagnostics/tests/duplicateJvmSignature/accidentalOverrides/require.kt
open class C {
    val x = 1
}

trait Tr : C {
    <!ACCIDENTAL_OVERRIDE!>fun getX()<!> = 1
}